--- a/src/index.css
+++ b/src/index.css
@@ -646,7 +646,9 @@ main {
   }
   
   .download-btn, .do-it-again-btn, .pause-play-btn{
-	font-size: 8px;
+	font-size: 10px;
+	padding: 5px;
+	//margin: 1px;
   }
 }
 
