--- a/src/index.css
+++ b/src/index.css
@@ -961,6 +961,7 @@ main {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Adds a shadow */
   min-height: 150px; /* Sets a minimum height */
   overflow: visible; /* Ensures content is visible */
+  min-height: 400px;
 }
 
 .team-member img {
@@ -1007,6 +1008,23 @@ main {
 
 .meet-the-team {
   padding-bottom: 100px; /* Adds padding at the bottom */
+}
+
+.github-link {
+  margin-right: 10px; /* Adjusts space between the icon and the text */
+  vertical-align: middle; /* Ensures alignment with the text */
+  color: black;
+}
+
+.username-link {
+  font-size: 1rem; /* Adjusts the font size */
+  text-decoration: none; /* Removes underline */
+  color: black; /* Sets text color */
+  font-weight: normal;
+}
+
+.username-link:hover {
+  text-decoration: underline; /* Adds underline on hover */
 }
 
 .go-top-btn {
